--- a/notifico/views/projects/templates/delete_channel.html
+++ b/notifico/views/projects/templates/delete_channel.html
@@ -2,17 +2,21 @@
 {% import "forms.html" as forms %}
 {% block content %}
 <div class="container-fluid page-content">
-    <div class="row-fluid">
-        <div class="span12 well">
-            <form class="form form-horizontal" method='POST' action="{{ request.url }}">
-                <legend>Delete Channel</legend>
-                <p>Are you sure you want to remove this channel? If you change your mind, you can always re-add it later.</p>
-                <div class="form-actions">
-                    <button type="submit" class="btn btn-danger" value='d' name='do'>Remove Channel</button>
-                    <a href="{{ url_for('.details', u=g.user.username, p=project.name) }}" class="btn btn-success">Cancel</a>
-                </div>
-            </form>
-        </div>
-    </div>
+  <div class="row-fluid">
+    <section>
+      <header>
+        <h2>Delete Channel</h2>
+      </header>
+      <div class="content">
+        <form class="form form-horizontal" method='POST' action="{{ request.url }}">
+          <p>Are you sure you want to remove this channel? If you change your mind, you can always re-add it later.</p>
+          <div class="form-actions">
+            <button type="submit" class="btn btn-danger" value='d' name='do'>Remove Channel</button>
+            <a href="{{ url_for('.details', u=g.user.username, p=project.name) }}" class="btn btn-success">Cancel</a>
+          </div>
+        </form>
+      </div>
+    </section>
+  </div>
 </div>
 {% endblock %}
