--- a/notifico/views/projects/templates/delete_project.html
+++ b/notifico/views/projects/templates/delete_project.html
@@ -2,19 +2,23 @@
 {% import "forms.html" as forms %}
 {% block content %}
 <div class="container-fluid page-content">
-    <div class="row-fluid">
-        <div class="span12 well">
-            <form class="form form-horizontal" method='POST' action="{{ request.url }}">
-                <legend>Delete Project</legend>
-                <p>If you're sure you want to delete the project <strong>{{ project.name }}</strong> enter your password.</p>
-                {{ form.hidden_tag() }}
-                {{ forms.render_field(form.password) }}
-                <div class="form-actions">
-                    <button type="submit" class="btn btn-danger">Delete Project</button>
-                    <a href="{{ url_for('.overview', u=g.user.username) }}" class="btn btn-success">Cancel</a>
-                </div>
-            </form>
-        </div>
-    </div>
+  <div class="row-fluid">
+    <section>
+      <header>
+        <h2>Delete Project</h2>
+      </header>
+      <div class="content">
+        <form class="form form-horizontal" method='POST' action="{{ request.url }}">
+          <p>If you're sure you want to delete the project <strong>{{ project.name }}</strong> enter your password.</p>
+          {{ form.hidden_tag() }}
+          {{ forms.render_field(form.password) }}
+          <div class="form-actions">
+            <button type="submit" class="btn btn-danger">Delete Project</button>
+            <a href="{{ url_for('.overview', u=g.user.username) }}" class="btn btn-success">Cancel</a>
+          </div>
+        </form>
+      </div>
+    </section>
+  </div>
 </div>
 {% endblock %}
