--- a/notifico/views/projects/templates/new_channel.html
+++ b/notifico/views/projects/templates/new_channel.html
@@ -2,21 +2,26 @@
 {% import "forms.html" as forms %}
 {% block content %}
 <div class="container-fluid page-content">
-    <div class="row-fluid">
-        <div class="span12 well">
-            <form class="form form-horizontal" method='POST' action="{{ request.url }}">
-                {{ form.hidden_tag() }}
-                {{ forms.render_field(form.channel) }}
-                {{ forms.render_field(form.host) }}
-                {{ forms.render_field(form.port) }}
-                {{ forms.render_field(form.ssl) }}
-                {{ forms.render_field(form.public) }}
-                <div class="form-actions">
-                    <button type="submit" class="btn btn-primary">Add Channel</button>
-                    <a href="{{ url_for('.details', u=g.user.username, p=project.name) }}" class="btn">Cancel</a>
-                </div>
-            </form>
-        </div>
-    </div>
+  <div class="row-fluid">
+    <section>
+      <header>
+        <h2>New Channel</h2>
+      </header>
+      <div class="content">
+        <form class="form form-horizontal" method='POST' action="{{ request.url }}">
+          {{ form.hidden_tag() }}
+          {{ forms.render_field(form.channel) }}
+          {{ forms.render_field(form.host) }}
+          {{ forms.render_field(form.port) }}
+          {{ forms.render_field(form.ssl) }}
+          {{ forms.render_field(form.public) }}
+          <div class="form-actions">
+            <button type="submit" class="btn btn-primary">Add Channel</button>
+            <a href="{{ url_for('.details', u=g.user.username, p=project.name) }}" class="btn">Cancel</a>
+          </div>
+        </form>
+      </div>
+    </section>
+  </div>
 </div>
 {% endblock %}
