--- a/notifico/views/projects/templates/delete_hook.html
+++ b/notifico/views/projects/templates/delete_hook.html
@@ -2,17 +2,21 @@
 {% import "forms.html" as forms %}
 {% block content %}
 <div class="container-fluid page-content">
-    <div class="row-fluid">
-        <div class="span12 well">
-            <form class="form form-horizontal" method='POST' action="{{ request.url }}">
-                <legend>Delete Hook</legend>
-                <p>Are you sure you want to delete this hook? You will not be able to create one with the same URL, and will have to reconfigure any services you have setup to use it.</p>
-                <div class="form-actions">
-                    <button type="submit" class="btn btn-danger" value='d' name='do'>Delete Hook</button>
-                    <a href="{{ url_for('.details', u=g.user.username, p=project.name) }}" class="btn btn-success">Cancel</a>
-                </div>
-            </form>
-        </div>
-    </div>
+  <div class="row-fluid">
+    <section>
+      <header>
+        <h2>Delete Hook</h2>
+      </header>
+      <div class="content">
+        <form class="form form-horizontal" method='POST' action="{{ request.url }}">
+          <p>Are you sure you want to delete this hook? You will not be able to create one with the same URL, and will have to reconfigure any services you have setup to use it.</p>
+          <div class="form-actions">
+            <button type="submit" class="btn btn-danger" value='d' name='do'>Delete Hook</button>
+            <a href="{{ url_for('.details', u=g.user.username, p=project.name) }}" class="btn btn-success">Cancel</a>
+          </div>
+        </form>
+      </div>
+    </section>
+  </div>
 </div>
 {% endblock %}
