--- a/notifico/views/projects/templates/edit_hook.html
+++ b/notifico/views/projects/templates/edit_hook.html
@@ -11,39 +11,42 @@
 <script type="text/javascript" src="/js/prettify.js"></script>
 <script type="text/javascript">
 $(document).ready(function(){
-    prettyPrint();
+  prettyPrint();
 })
 </script>
 {% endblock %}
 
 {% block content %}
 <div class="container-fluid page-content">
-    <div class="row-fluid">
-        <div class="span12">
-            <div class="row-fluid">
-                <div class="span12 well">
-                    {{ service.service_description()|safe }}
-                    <div class="row-fluid" style="margin-top: 20px;">
-                        <div class="span12">
-                            <form class="form form-horizontal" method='POST' action="{{ request.url }}">
-                                {% if form %}
-                                {{ form.hidden_tag() }}
-                                {% for field in form %}
-                                    {% if field.id != 'csrf_token' %}
-                                        {{ forms.render_field(field) }}
-                                    {% endif %}
-                                {% endfor %}
-                                {% endif %}
-                                <div class="form-actions">
-                                    <button type="submit" class="btn btn-primary">Save Changes</button>
-                                    <a href="{{ url_for('.details', u=g.user.username, p=project.name) }}" class="btn">Cancel</a>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
+  <div class="row-fluid">
+    <div class="span12">
+      <section>
+        <header>
+          <h2>Edit Hook</h2>
+        </header>
+        <div class="content">
+          {{ service.service_description()|safe }}
+          <div class="row-fluid" style="margin-top: 20px;">
+            <div class="span12">
+              <form class="form form-horizontal" method='POST' action="{{ request.url }}">
+                {% if form %}
+                {{ form.hidden_tag() }}
+                {% for field in form %}
+                  {% if field.id != 'csrf_token' %}
+                    {{ forms.render_field(field) }}
+                  {% endif %}
+                {% endfor %}
+                {% endif %}
+                <div class="form-actions">
+                  <button type="submit" class="btn btn-primary">Save Changes</button>
+                  <a href="{{ url_for('.details', u=g.user.username, p=project.name) }}" class="btn">Cancel</a>
                 </div>
+              </form>
             </div>
+          </div>
         </div>
+      </section>
     </div>
+  </div>
 </div>
 {% endblock %}
