--- a/notifico/views/projects/templates/overview.html
+++ b/notifico/views/projects/templates/overview.html
@@ -2,72 +2,83 @@
 {% import "forms.html" as forms %}
 
 {% macro row(project) %}
-    <tr>
-        <td>
-            {% if not project.public %}
-                <i class="icon-lock"></i>
-            {% else %}
-                <i class="icon-unlock"></i>    
-            {% endif %}
-            <a href="{{ url_for('.details', p=project.name, u=user.username) }}">{{ project.full_name }}</a>
-        </td>
-        <td style="text-align: center;">{{ project.message_count }}</td>
-        <td style="text-align: center;">
-            {% if is_owner %}
-            {{ project.channels.count() }}
-            {% else %}
-            {{ project.channels.filter_by(public=True).count() }}
-            {% endif %}
-        </td>
-        <td style="text-align: center;">{{ project.hooks.count() }}</td>
-        {% if is_owner %}
-        <td>
-            <div class="pull-right">
-                <a class="btn btn-danger" href="{{ url_for('.delete_project', u=user.username, p=project.name) }}"><i class="icon-trash icon-white"></i> Delete</a>
-            </div>
-        </td>
-        {% endif %}
-    </tr>
+  <tr>
+    <td>
+      {% if not project.public %}
+        <i class="icon-lock"></i>
+      {% else %}
+        <i class="icon-unlock"></i>    
+      {% endif %}
+      <a href="{{ url_for('.details', p=project.name, u=user.username) }}">{{ project.full_name }}</a>
+    </td>
+    <td style="text-align: center;">{{ project.message_count }}</td>
+    <td style="text-align: center;">
+      {% if is_owner %}
+      {{ project.channels.count() }}
+      {% else %}
+      {{ project.channels.filter_by(public=True).count() }}
+      {% endif %}
+    </td>
+    <td style="text-align: center;">{{ project.hooks.count() }}</td>
+    {% if is_owner %}
+    <td>
+      <div class="pull-right">
+        <a href="{{ url_for('.edit_project', u=user.username, p=project.name) }}" class="btn btn-mini">
+          Edit Project
+        </a>
+        <a class="btn btn-danger btn-mini" href="{{ url_for('.delete_project', u=user.username, p=project.name) }}">
+          <i class="icon-trash icon-white"></i> Delete
+        </a>
+      </div>
+    </td>
+    {% endif %}
+  </tr>
 {% endmacro %}
 
 {% block content %}
 <div class="container-fluid page-content">
-    {% if is_owner %}
-    <div class="row-fluid">
-        <div class="span12">
-            <p>
-                <a href="{{ url_for('.new') }}" class="btn btn-primary">New Project</a>
-                <a href="{{ url_for('pimport.github') }}" class="btn">Import From Github</a>
-            </p>
+  <div class="row-fluid">
+    <div class="span12">
+      <section>
+        <header>
+          <div class="pull-left">
+            <h2>Projects</h2>
+          </div>
+          <div class="pull-right">
+            {% if is_owner %}
+            <a href="{{ url_for('.new') }}" class="btn btn-success">New Project</a>
+            <a href="{{ url_for('pimport.github') }}" class="btn btn-info">Import From Github</a>
+            {% endif %}
+          </div>
+          <div style="clear: both;"></div>
+        </header>
+        <div class="content">
+          <table class="table table-striped table-vertical">
+            <thead>
+              <tr>
+                <th>Project</th>
+                <th style="text-align: center;">Messages</th>
+                <th style="text-align: center;">Channels</th>
+                <th style="text-align: center;">Hooks</th>
+                {% if is_owner %}
+                <th></th>
+                {% endif %}
+              </tr>
+            </thead>
+            <tbody>
+              {% for project in user.public_projects %}
+              {{ row(project) }}
+              {% endfor %}
+              {% if is_owner %}
+                {% for project in user.private_projects %}
+                {{ row(project) }}
+                {% endfor %}
+              {% endif %}
+            </tbody>
+          </table>
         </div>
+      </section>
     </div>
-    {% endif %}
-    <div class="row-fluid">
-        <div class="span12">
-            <table class="table table-hover table-square table-vertical">
-                <thead>
-                    <tr>
-                        <th>Project</th>
-                        <th style="text-align: center;">Messages</th>
-                        <th style="text-align: center;">Channels</th>
-                        <th style="text-align: center;">Hooks</th>
-                        {% if is_owner %}
-                        <th></th>
-                        {% endif %}
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for project in user.public_projects %}
-                    {{ row(project) }}
-                    {% endfor %}
-                    {% if is_owner %}
-                        {% for project in user.private_projects %}
-                        {{ row(project) }}
-                        {% endfor %}
-                    {% endif %}
-                </tbody>
-            </table>
-        </div>
-    </div>
+  </div>
 </div>
 {% endblock %}
