--- a/notifico/views/projects/templates/project_details.html
+++ b/notifico/views/projects/templates/project_details.html
@@ -1,174 +1,207 @@
 {% extends "base/body.html" %}
+{% import "forms.html" as forms %}
+  
 {% block content %}
 <div class="container-fluid page-content">
-    {% if is_owner %}
-    <div class="row-fluid">
-        <div class="span12">
-            <a href="{{ url_for('.edit_project', u=user.username, p=project.name) }}" class="btn btn-primary">
-                Edit Project
-            </a>
-            <a href="{{ url_for('.new_hook', p=project.name, u=user.username) }}" class="btn">
-                Create New Hook
-            </a>
-            <a href="{{ url_for('.new_channel', p=project.name, u=user.username) }}" class="btn">
-                Add New Channel
-            </a>
-        </div>
+  {% if is_owner %}
+  <div class="row-fluid">
+    <div class="span12">
+      <h2>
+        <a href="{{ url_for('.overview', u=project.owner.username) }}">{{ project.owner.username }}</a>/{{ project.name }}
+      </h2>
     </div>
-    {% endif %}
-    {% if is_owner %}
-    <div class="row-fluid">
-        <div class="span12">
+  </div>
+  {% endif %}
+  {% if is_owner %}
+  <div class="row-fluid">
+    <div class="span12">
+      <section>
+        <header>
+          <div class="pull-left">
             <a id="hooks"></a>
             <h2>Message Hooks</h2>
-            <p><em>Hooks</em> are endpoints for 3rd party services (and scripts) capable of making a HTTP POST request. Hooks recieve messages, which are then formatted and forwarded to <a href="#channels">IRC channels</a>.</p>
-        </div>
-    </div>
-    <div class="row-fluid">
-        <div class="span12">
-            {% if not project.hooks.count() %}
-            <div class="alert alert-info">
-                You haven't created any hooks yet for this project.
-            </div>
-            {% else %}
-            <table class="table table-square table-hover">
-                <thead>
-                    <tr>
-                        <th>Service Name</th>
-                        <th>Hook URL</th>
-                        <th>Created</th>
-                        <th style="text-align: center;">Messages</th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for hook in project.hooks %}
-                    <tr>
-                        <td><a href="{{ url_for('.edit_hook', p=project.name, u=user.username, hid=hook.id) }}">{{ hook.hook.SERVICE_NAME }}</a></td>
-                        <td><a href="{{ url_for('.hook_recieve', pid=project.id, key=hook.key) }}">Link</a></td>
-                        <td>{{ hook.created.strftime("%Y-%m-%d") }}</td>
-                        <td style="text-align: center;">{{ hook.message_count }}</td>
-                        <td>
-                            <div class="pull-right">
-                                <a href="{{ url_for('.delete_hook', p=project.name, u=user.username, hid=hook.id) }}" class="btn btn-mini btn-danger">
-                                    <i class="icon-trash icon-white"></i> Delete
-                                </a>
-                            </div>
-                        </td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
+          </div>
+          <div class="pull-right">
+            {% if is_owner %}
+            <a href="{{ url_for('.new_hook', p=project.name, u=user.username) }}" class="btn btn-success">
+              Create New Hook
+            </a>
             {% endif %}
+          </div>
+          <div style="clear: both;"></div>
+        </header>
+        <div class="content">
+          <p><em>Hooks</em> are endpoints for 3rd party services (and scripts) capable of making a HTTP POST request. Hooks recieve messages, which are then formatted and forwarded to <a href="#channels">IRC channels</a>.</p>
+          {% if not project.hooks.count() %}
+          <div class="alert alert-info">
+            You haven't created any hooks yet for this project.
+          </div>
+          {% else %}
+          <table class="table table-vertical table-striped">
+            <thead>
+              <tr>
+                <th>Service Name</th>
+                <th>Hook URL</th>
+                <th>Created</th>
+                <th style="text-align: center;">Messages</th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for hook in project.hooks %}
+              <tr>
+                <td>
+                  <a href="{{ url_for('.edit_hook', p=project.name, u=user.username, hid=hook.id) }}">
+                    {{ hook.hook.SERVICE_NAME }}
+                  </a>
+                </td>
+                <td>
+                  <a href="{{ url_for('.hook_recieve', pid=project.id, key=hook.key) }}">
+                    Link
+                  </a>
+                </td>
+                <td>
+                  {{ hook.created.strftime("%Y-%m-%d") }}
+                </td>
+                <td style="text-align: center;">
+                  {{ hook.message_count }}
+                </td>
+                <td>
+                  <div class="pull-right">
+                    <a href="{{ url_for('.delete_hook', p=project.name, u=user.username, hid=hook.id) }}" class="btn btn-mini btn-danger">
+                      <i class="icon-trash icon-white"></i> Delete
+                    </a>
+                  </div>
+                </td>
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+          {% endif %}
         </div>
-    {% endif %}
-    {#
-        Anyone can see what channels the project is announced to, so
-        long as they're marked public.
-    #}
-    <div class="row-fluid">
-        <div class="span12">
+      </section>
+    </div>
+  </div>
+  {% endif %}
+  {#
+    Anyone can see what channels the project is announced to, so
+    long as they're marked public.
+  #}
+  <div class="row-fluid">
+    <div class="span12">
+      <section>
+        <header>
+          <div class="pull-left">
             <a id="channels"></a>
             <h2>IRC Channels</h2>
-            <p>Any messages recieved by this project will be forwarded to any of the IRC channels that have added to them. An operator of the channel may blacklist the project, or ban the bot from entering their channel to prevent abuse.</p>
-        </div>
-    </div>
-    <div class="row-fluid">
-        <div class="span12">
-            {% if not project.channels.count() %}
-            <div class="alert alert-info">
-                No channels have been added to this project.
-            </div>
-            {% else %}
-            <table class="table table-square table-hover">
-                <thead>
-                    <tr>
-                        <th>Channel</th>
-                        <th>Host</th>
-                        <th>Port</th>
-                        <th>SSL</th>
-                        <th>Status</th>
-                        {% if is_owner %}
-                        <th style="text-align: center;">Public</th>
-                        <th></th>
-                        {% endif %}
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for channel in project.channels.filter_by(public=True) %}
-                    <tr>
-                        <td>{{ channel.channel }}</td>
-                        <td>{{ channel.host }}</td>
-                        <td>{{ channel.port }}</td>
-                        <td><i class="icon-{% if channel.ssl %}ok{% else %}remove{% endif %}"></i></td>
-                        <td>
-                            {% if channel_status(channel) == 'ok' %}
-                            <span class="text-success">
-                            {% elif channel_status(channel) == 'fatal' %}
-                            <span class="text-error">
-                            {% elif channel_status(channel) == 'warning' %}
-                            <span class="text-warning">
-                            {% else %}
-                            <span>
-                            {% endif %}
-                                {{ channel_status(channel) }}
-                            </span>
-                        </td>
-                        {% if is_owner %}
-                        <td style="text-align: center;">
-                            <i class="icon-{% if project.public %}ok{% else %}lock{% endif %}"></i>
-                        </td>
-                        <td>
-                            <div class="pull-right">
-                                <div class="pull-right">
-                                <a href="{{ url_for('.delete_channel', p=project.name, u=user.username, cid=channel.id) }}" class="btn btn-mini btn-danger">
-                                    <i class="icon-trash icon-white"></i> Delete
-                                </a>
-                            </div>
-                            </div>
-                        </td>
-                        {% endif %}
-                    </tr>
-                    {% endfor %}
-                    {% if is_owner %}
-                    {% for channel in project.channels.filter_by(public=False) %}
-                    <tr>
-                        <td>{{ channel.channel }}</td>
-                        <td>{{ channel.host }}</td>
-                        <td>{{ channel.port }}</td>
-                        <td><i class="icon-{% if channel.ssl %}ok{% else %}remove{% endif %}"></i></td>
-                        <td>
-                            {% if channel_status(channel) == 'ok' %}
-                            <span class="text-success">
-                            {% elif channel_status(channel) == 'fatal' %}
-                            <span class="text-error">
-                            {% elif channel_status(channel) == 'warning' %}
-                            <span class="text-warning">
-                            {% else %}
-                            <span>
-                            {% endif %}
-                                {{ channel_status(channel) }}
-                            </span>
-                        </td>
-                        <td style="text-align: center;">
-                            <i class="icon-{% if channel.public %}ok{% else %}lock{% endif %}"></i>
-                        </td>
-                        <td>
-                            <div class="pull-right">
-                                <div class="pull-right">
-                                <a href="{{ url_for('.delete_channel', p=project.name, u=user.username, cid=channel.id) }}" class="btn btn-mini btn-danger">
-                                    <i class="icon-trash icon-white"></i> Delete
-                                </a>
-                            </div>
-                            </div>
-                        </td>
-                    </tr>
-                    {% endfor %}
-                    {% endif %}
-                </tbody>
-            </table>
+          </div>
+          <div class="pull-right">
+            {% if is_owner %}
+            <a href="{{ url_for('.new_channel', p=project.name, u=user.username) }}" class="btn btn-success">
+              Add New Channel
+            </a>
             {% endif %}
+          </div>
+          <div style="clear: both;"></div>
+        </header>
+        <div class="content">
+          <p>Any messages recieved by this project will be forwarded to any of the IRC channels that have been added to them. An operator of the channel may blacklist the project, or ban the bot from entering their channel to prevent abuse.</p>
+          {% if not project.channels.count() %}
+          <div class="alert alert-info">
+            No channels have been added to this project.
+          </div>
+          {% else %}
+          <table class="table table-striped table-vertical">
+            <thead>
+              <tr>
+                <th>Channel</th>
+                <th>Host</th>
+                <th>Port</th>
+                <th>SSL</th>
+                <th>Status</th>
+                {% if is_owner %}
+                <th style="text-align: center;">Public</th>
+                <th></th>
+                {% endif %}
+              </tr>
+            </thead>
+            <tbody>
+              {% for channel in project.channels.filter_by(public=True) %}
+              <tr>
+                <td>{{ channel.channel }}</td>
+                <td>{{ channel.host }}</td>
+                <td>{{ channel.port }}</td>
+                <td><i class="icon-{% if channel.ssl %}ok{% else %}remove{% endif %}"></i></td>
+                <td>
+                  {% if channel_status(channel) == 'ok' %}
+                  <span class="text-success">
+                  {% elif channel_status(channel) == 'fatal' %}
+                  <span class="text-error">
+                  {% elif channel_status(channel) == 'warning' %}
+                  <span class="text-warning">
+                  {% else %}
+                  <span>
+                  {% endif %}
+                    {{ channel_status(channel) }}
+                  </span>
+                </td>
+                {% if is_owner %}
+                <td style="text-align: center;">
+                  <i class="icon-{% if project.public %}ok{% else %}lock{% endif %}"></i>
+                </td>
+                <td>
+                  <div class="pull-right">
+                    <div class="pull-right">
+                    <a href="{{ url_for('.delete_channel', p=project.name, u=user.username, cid=channel.id) }}" class="btn btn-mini btn-danger">
+                      <i class="icon-trash icon-white"></i> Delete
+                    </a>
+                  </div>
+                  </div>
+                </td>
+                {% endif %}
+              </tr>
+              {% endfor %}
+              {% if is_owner %}
+              {% for channel in project.channels.filter_by(public=False) %}
+              <tr>
+                <td>{{ channel.channel }}</td>
+                <td>{{ channel.host }}</td>
+                <td>{{ channel.port }}</td>
+                <td><i class="icon-{% if channel.ssl %}ok{% else %}remove{% endif %}"></i></td>
+                <td>
+                  {% if channel_status(channel) == 'ok' %}
+                  <span class="text-success">
+                  {% elif channel_status(channel) == 'fatal' %}
+                  <span class="text-error">
+                  {% elif channel_status(channel) == 'warning' %}
+                  <span class="text-warning">
+                  {% else %}
+                  <span>
+                  {% endif %}
+                    {{ channel_status(channel) }}
+                  </span>
+                </td>
+                <td style="text-align: center;">
+                  <i class="icon-{% if channel.public %}ok{% else %}lock{% endif %}"></i>
+                </td>
+                <td>
+                  <div class="pull-right">
+                    <div class="pull-right">
+                    <a href="{{ url_for('.delete_channel', p=project.name, u=user.username, cid=channel.id) }}" class="btn btn-mini btn-danger">
+                      <i class="icon-trash icon-white"></i> Delete
+                    </a>
+                  </div>
+                  </div>
+                </td>
+              </tr>
+              {% endfor %}
+              {% endif %}
+            </tbody>
+          </table>
+          {% endif %}
         </div>
+      </section>
     </div>
+  </div>
 </div>
 {% endblock %}
